refactor
Signed-off-by: Ali <alijakparov.kz@gmail.com>